Fixed image zoom
fixed issue with image overflowing and touching bottom image

--- a/kitbasic-new/css/style.css
+++ b/kitbasic-new/css/style.css
@@ -306,7 +306,7 @@ line-height: 1.6;
   margin-top: 1rem;
 }
 
-.stayhere-img img{
+.stayhere-img div{
   margin-bottom: 1rem;
 }
 
